--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,10 +1,11 @@
-name: "Kunho Kim"
-title: "Research Scientist [AT] RebuilderAI"
-email: "kkh23834022 [AT] gmail.com"
-profile_pic: "/assets/profile-pics/2019_profile.jpeg"
-twitter: "https://twitter.com/kunho_kim_"
-linkedin: "https://www.linkedin.com/in/%EA%B1%B4%ED%98%B8-%EA%B9%80-192897184/"
-github: "https://github.com/Soulmates2"
-google_scholar: "https://scholar.google.com/citations?user=3_0fPnwAAAAJ&hl=en"
-cv: "/assets/cv/cv_KunhoKim.pdf"
-google_analystics_tracking_id: 'UA-46778883-1'
+name: "Jinho Park"
+title: "Master Degree [AT] KAIST"
+email: "binlepain178 [AT] gmail.com"
+profile_pic: "/assets/profile-pics/2023_profile.jpeg"
+twitter: "https://x.com/jinho___park"
+linkedin: "https://www.linkedin.com/in/%EC%A7%84%ED%98%B8-%EB%B0%95-48baba237/"
+github: "https://github.com/jinhopark-ai"
+google_scholar: "https://scholar.google.com/citations?user=itUghOQAAAAJ&hl=en"
+cv: "/assets/cv/Curriculum_Vitae_Jinho_Park.pdf"
+# google_analystics_tracking_id: 'UA-46778883-1'
+
