--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -1,79 +1,43 @@
 experiences:
-- place: "RebuilderAI"
+- place: "KAIST"
   time: "Mar 2024 - now"
-  title: "AI Researcher"
-  subtitle: "Research on 3D reconstruction"
-  category: "work"
-
-- place: "KAIST"
-  time: "Mar 2022 - Feb 2024"
   title: "M.S. Student"
-  subtitle: "KAIST Visual AI Lab <br> (Advisor: Minhyuk Sung)"
+  subtitle: "KAIST Language & Knowledge Lab <br> (Advisor: Minjoon Seo)"
   category: "school"
 
-- place: "Mathpang"
-  time: "Aug 2021 - Jan 2022"
-  title: "ML Engineer"
-  subtitle: "TIPS government support task"
-  category: "work"
-
-- place: "Floatic"
-  time: "Aug 2021"
-  title: "Outsourcing"
-  subtitle: "3D modeling"
-  category: "work"
-
 - place: "KAIST"
-  time: "Sep 2020 - Dec 2020"
+  time: "Mar 2023 - Feb 2024"
   title: "Undergraduate Research Intern"
-  subtitle: "Urban Robotics Lab <br> (Advisor: Hyun Myung)"
+  subtitle: "Language & Knowledge Lab <br> (Advisor: Minjoon Seo)"
   category: "school"
 
-- place: "KAIST"
-  time: "Feb-Mar 2021"
-  title: "Outsourcing"
-  subtitle: "ICN Lab, Interactive software App"
-  category: "school"
-
-- place: "KAIST"
-  time: "Sep 2020 - Dec 2020"
-  title: "Industry-Academia Research Intern"
-  subtitle: "Text data visualization with entity linking"
-  category: "school"
-
-- place: "KI4AI"
-  time: "Sep 2020 - Dec 2020"
-  title: "Undergraduate Research Intern"
-  subtitle: "Study on Emotional TTS model using Tacotron"
-  category: "work"
-
-- place: "Kohyoung"
-  time: "Sep 2019 - Feb 2020"
-  title: "Machine Intelligence Team Intern"
-  subtitle: "Develop anomaly detection simulator"
-  category: "work"
-
-- place: "DHive"
-  time: "Jun 2019 - Jul 2020"
-  title: "Deep Learning Developer"
-  subtitle: "Startup"
+- place: "Growdle"
+  time: "Sep 2022 - Feb 2023"
+  title: "AI R&D Team Intern"
+  subtitle: "Utilize Retrieval-based Method to Solve Dialogue Summarization Task"
   category: "work"
 
 - place: "KAIST"
-  time: "Jun 2019 - Aug 2019"
+  time: "Jun 2022 - Aug 2022"
   title: "Undergraduate Research Intern"
-  subtitle: "Robot Intelligence Technology Lab <br> (Advisor: Jonghwan Kim)"
+  subtitle: "Prosys Lab <br> (Advisor: Kihong Heo)"
   category: "school"
 
 - place: "KAIST"
-  time: "May-Aug 2019"
+  time: "Dec 2021 - Jun 2022"
   title: "Undergraduate Research Intern"
-  subtitle: "NMAIL <br> (Advisor: Byunghyung Kim)"
+  subtitle: "User & Information Lab <br> (Advisor: Alice Oh)"
   category: "school"
 
+- place: "SAMSUNG Electronics"
+  time: "Jul 2021 - Aug 2021"
+  title: "Develop Intern"
+  subtitle: "Development Event Log Analysis Web Page"
+  category: "work"
+
 - place: "KAIST"
-  time: "Mar 2017 - Feb 2022"
+  time: "Mar 2017 - Feb 2024"
   title: "B.S. Student"
-  subtitle: "Electronical Engineering & Computer Science"
+  subtitle: "Computer Science <br> minored in Electrical Engineering"
   category: "school"
 
