--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -1,54 +1,54 @@
 projects:
-  - title: "Score-based Point Cloud Denoising"
-    subtitle: "Reimplement the paper (Deep Learning)"
-    thumbnail: "assets/projects/2022_score-based_denoising/thumbnail.png"
-    url: "projects/2022_score-based-denoising.html"
-    selected: y
+  # - title: "Score-based Point Cloud Denoising"
+  #   subtitle: "Reimplement the paper (Deep Learning)"
+  #   thumbnail: "assets/projects/2022_score-based_denoising/thumbnail.png"
+  #   url: "projects/2022_score-based-denoising.html"
+  #   selected: y
 
-  - title: "Minimum"
-    subtitle: "Weight management diary App (iOS)"
-    thumbnail: "assets/projects/2021_minimum/thumbnail.png"
-    url: "projects/2021_minimum.html"
-    selected: y
+  # - title: "Minimum"
+  #   subtitle: "Weight management diary App (iOS)"
+  #   thumbnail: "assets/projects/2021_minimum/thumbnail.png"
+  #   url: "projects/2021_minimum.html"
+  #   selected: y
   
-  - title: "CMTP"
-    subtitle: "Predict the trajectory of the vehicle using deep learning (Deep Learning)"
-    thumbnail: "assets/projects/2020_cmtp/thumbnail.png"
-    url: "projects/2020_cmtp.html"
-    selected: y
+  # - title: "CMTP"
+  #   subtitle: "Predict the trajectory of the vehicle using deep learning (Deep Learning)"
+  #   thumbnail: "assets/projects/2020_cmtp/thumbnail.png"
+  #   url: "projects/2020_cmtp.html"
+  #   selected: y
 
-  - title: "MAMAGO"
-    subtitle: "Personalized English AI tutor (Web Chatbot)"
-    thumbnail: "assets/projects/2020_mamago/thumbnail.png"
-    url: "projects/2020_mamago.html"
-    selected: y
+  # - title: "MAMAGO"
+  #   subtitle: "Personalized English AI tutor (Web Chatbot)"
+  #   thumbnail: "assets/projects/2020_mamago/thumbnail.png"
+  #   url: "projects/2020_mamago.html"
+  #   selected: y
 
-  - title: "Fash"
-    subtitle: "Weather based AI style coordination recommendation App (Deep Learning, iOS)"
-    thumbnail: "assets/projects/2020_fash/thumbnail.png"
-    url: "projects/2020_fash.html"
-    selected: y
+  # - title: "Fash"
+  #   subtitle: "Weather based AI style coordination recommendation App (Deep Learning, iOS)"
+  #   thumbnail: "assets/projects/2020_fash/thumbnail.png"
+  #   url: "projects/2020_fash.html"
+  #   selected: y
 
-  - title: "Creating Song Lyrics System"
-    subtitle: "Using Char-RNN model (Deep Learning)"
-    thumbnail: "assets/projects/no_image.png"
-    url: "projects/2019_creating-song-lyrics.html"
-    selected: n
+  # - title: "Creating Song Lyrics System"
+  #   subtitle: "Using Char-RNN model (Deep Learning)"
+  #   thumbnail: "assets/projects/no_image.png"
+  #   url: "projects/2019_creating-song-lyrics.html"
+  #   selected: n
   
-  - title: "Lego Racer"
-    subtitle: "Racing game (Unity, C#)"
-    thumbnail: "assets/projects/no_image.png"
-    url: "projects/2019_lego-racer.html"
-    selected: n
+  # - title: "Lego Racer"
+  #   subtitle: "Racing game (Unity, C#)"
+  #   thumbnail: "assets/projects/no_image.png"
+  #   url: "projects/2019_lego-racer.html"
+  #   selected: n
   
-  - title: "Rhythm is life"
-    subtitle: "Rhythm game (Unity, C#)"
-    thumbnail: "assets/projects/2019_rhythm-is-life/thumbnail.png"
-    url: "projects/2019_rhythm-is-life.html"
-    selected: y
+  # - title: "Rhythm is life"
+  #   subtitle: "Rhythm game (Unity, C#)"
+  #   thumbnail: "assets/projects/2019_rhythm-is-life/thumbnail.png"
+  #   url: "projects/2019_rhythm-is-life.html"
+  #   selected: y
 
-  - title: "Live Text Editor App"
-    subtitle: "Using socket communication (Android, Java)"
-    thumbnail: "assets/projects/no_image.png"
-    url: "projects/2019_live-text-editor.html"
-    selected: n
+  # - title: "Live Text Editor App"
+  #   subtitle: "Using socket communication (Android, Java)"
+  #   thumbnail: "assets/projects/no_image.png"
+  #   url: "projects/2019_live-text-editor.html"
+  #   selected: n
